--- a/main.css
+++ b/main.css
@@ -1,6 +1,75 @@
 * {
- /* margin: 0;
- padding: 0; */
+ margin: 0;
+ padding: 0;
+}
+
+body {
  font-family: 'Roboto',
   sans-serif;
+ background: #f5f3f5;
+}
+
+#nav ul {
+ list-style-type: none;
+}
+
+#nav ul li a {
+ text-decoration: none;
+ display: block;
+ color: #ffc914;
+ background: #2e282a;
+ font-size: 20px;
+ transition: color 0.5s ease, background 0.5s ease;
+ padding: 10px;
+}
+
+#nav ul li a:hover {
+ color: #2e282a;
+ background: #ffc914;
+}
+
+.nav-logo {
+ background: #ffc914;
+ padding: 10px;
+ display: flex;
+ justify-content: space-between;
+}
+
+.nav-logo .fa {
+ align-self: center;
+ padding: 10px;
+ font-size: 25px;
+ cursor: pointer;
+}
+
+@media screen and (min-width:776px) {
+ #nav {
+  border-top: 5px solid #ffc914;
+  display: flex;
+  background: #2e282a;
+ }
+
+ #nav ul {
+  /* this should be important */
+  display: flex !important;
+  flex: 1 0 auto;
+  justify-content: space-around;
+  align-self: center;
+  flex-wrap: wrap;
+  padding: 0 10px;
+ }
+
+ #nav ul li {
+  flex: 1 0 100px;
+ }
+
+ #nav ul li a {
+  border-radius: 5px;
+  text-align: center;
+ }
+
+ .nav-icons,
+ #toggle-btn {
+  display: none;
+ }
 }
