--- a/main.css
+++ b/main.css
@@ -144,6 +144,7 @@ header {
  background: #ffc914;
 }
 
+/* end of header  */
 /* icons section */
 #icon-section {
  height: 70px;
@@ -160,6 +161,7 @@ header {
  font-size: 30px;
  color: #ffc914;
  border-radius: 5px;
+
  background: rgba(0, 0, 0, 0.8);
  transition: transform 0.5s ease, color 0.5s ease;
 }
@@ -173,4 +175,208 @@ header {
 
 /* end of icons section */
 
-/* end of header  */
+/* skills styles */
+
+/* title */
+.title {
+ display: flex;
+ padding: 20px;
+}
+
+.title-icon .fa {
+ font-size: 60px;
+ color: #ffc914;
+ margin-right: 10px;
+
+}
+
+.title-text {
+ padding-left: 10px;
+ border-left: 3px solid #b5c2b7;
+ text-transform: uppercase;
+}
+
+.title-heading {
+ color: #2e282a;
+}
+
+.title-subheading {
+ padding: 5px;
+ text-transform: capitalize;
+ color: #b5c2b7;
+}
+
+/* end of title */
+#skills .title {
+ margin-top: -40px;
+}
+
+.skills-center {
+ max-width: 90vw;
+ margin: 0 auto;
+ padding: 20px 0;
+}
+
+.skill {
+ margin: 40px 0;
+}
+
+.skill .fa {
+ font-size: 60px;
+ color: #00a7e1;
+ background: #ffc914;
+ padding: 60px;
+ transition: color 0.5s ease, background 0.5s ease;
+}
+
+.skill .fa:hover {
+ background: #2e282a;
+ color: #ffc914;
+}
+
+.skill h3 {
+ text-transform: uppercase;
+ margin: 20px 0;
+}
+
+.skill p {
+ text-transform: capitalize;
+ line-height: 1.5;
+ width: 70%;
+ color: #b5c2b7;
+}
+
+.fa-apple {
+ clip-path: polygon(55% 0%, 0% 100%, 100% 100%);
+}
+
+.fa-google {
+ clip-path: polygon(0 0, 100% 0, 100% 100%, 0 65%);
+}
+
+.fa-android {
+ clip-path: polygon(0 50%, 50% 0, 100% 50%, 50% 100%);
+}
+
+.fa-gear {
+ clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+}
+
+/* @media screen and (min-width:576px) {
+ .skills-center {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+ }
+
+ .skill {
+  flex: 0 0 calc(50% - 1em);
+  text-align: center;
+ }
+
+ .skill p {
+  margin: 0 auto;
+  width: 80%;
+ } */
+
+/* }
+
+@media screen and (min-width:992px) {
+ .skill {
+  flex: 0 0 calc(25% - 1em);
+ }
+
+ .skill p {
+  width: 100%;
+ } */
+
+/* } */
+
+@media screen and (min-width:576px) {
+ .skills-center {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1em;
+ }
+
+ .skill {
+  text-align: center;
+ }
+
+ .skill p {
+  margin: 0 auto;
+  width: 80%;
+ }
+}
+
+@media screen and (min-width:992px) {
+ .skills-center {
+
+  grid-template-columns: repeat(4, 1fr);
+ }
+
+ .skill p {
+  width: 100%;
+ }
+}
+
+
+/* end of skills styles */
+/* form section */
+#form {
+ min-height: 60vh;
+ background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url(images/background-filler-1.jpg) center/cover fixed no-repeat;
+ clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+.form-title {
+ text-align: center;
+ color: #f5f3f5;
+ margin: 0 0 40px 0;
+ font-size: 40px;
+ text-transform: uppercase;
+}
+
+#email {
+ border: none;
+ background: transparent;
+ border-bottom: 3px solid #f5f3f5;
+ font-size: 30px;
+ margin: 10px 20px;
+}
+
+#email::placeholder {
+ color: #f5f3f5;
+ text-transform: capitalize;
+
+}
+
+#submit {
+ display: inline-block;
+ background: transparent;
+ border: 3px solid #f5f3f5;
+ padding: 10px 30px;
+ font-size: 25px;
+ text-transform: uppercase;
+ color: #ffc914;
+ margin: 10px 20px;
+ transition: color 0.5s ease, background 0.5s ease, border 0.5s ease;
+}
+
+#submit:hover {
+ color: #f5f5f5;
+ background: #ffc914;
+ border-color: #ffc914;
+}
+
+form {
+ display: flex;
+ flex-wrap: wrap;
+}
+
+
+/* end of form section */
