--- a/main.css
+++ b/main.css
@@ -445,3 +445,60 @@ form {
 }
 
 /* end of work section */
+
+/* about section */
+#about {
+ min-height: 90vh;
+ padding: 40px 0;
+ background: linear-gradient(rgba(255, 201, 20, 0.3), rgba(255, 201, 20, 0.3)),
+  url(images/current-projects-1.jpeg) center/cover no-repeat fixed;
+ clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 95%);
+}
+
+
+
+
+#about-center {
+ max-width: 90vw;
+ margin: 0 auto;
+}
+
+
+#about-photo img {
+ width: 100%;
+ border-radius: 20px;
+ transition: transform 0.5s ease;
+}
+
+#about-photo img:hover {
+ transform: scale(0.8);
+}
+
+#about-photo,
+#about-text {
+ margin: 40px 0;
+}
+
+.ui-accordion-header {}
+
+.ui-accordion .ui-accordion-content {}
+
+@media screen and (min-width:776px) {
+ #about-center {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+ }
+
+ #about-text,
+ #about-photo {
+  flex: 0 0 calc(50% - 1em);
+ }
+
+ #about-text {
+  align-self: center;
+ }
+}
+
+
+/* end of about section */
