--- a/main.css
+++ b/main.css
@@ -519,3 +519,245 @@ form {
 
 
 /* end of about section */
+
+/* current projects  */
+#current .title {
+ margin: 40px 0;
+}
+
+.current-item {
+ /* background: #ffc914; */
+ background: linear-gradient(rgb(255, 201, 20), rgb(6, 209, 245));
+}
+
+.current-item img {
+ display: block;
+ width: 100%;
+ opacity: 1;
+ transition: opacity 1s ease;
+}
+
+.current-item img:hover {
+ opacity: 0.5;
+}
+
+/* @media screen and (min-width:576px) {
+ #current-center {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+ }
+
+ .current-item {
+  flex: 0 0 50%;
+ }
+}
+
+@media screen and (min-width:992px) {
+
+ .current-item {
+  flex: 0 0 25%;
+ }
+} */
+
+@media screen and (min-width:576px) {
+ #current-center {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+ }
+}
+
+@media screen and (min-width:992px) {
+ #current-center {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+ }
+}
+
+/* end of current projects  */
+
+
+/* number section */
+.number {
+ text-align: center;
+ background: #191919;
+ padding: 40px 0;
+ color: #fde79c;
+ transition: background 0.5s ease, color 0.5s ease;
+}
+
+.number:hover {
+ background: #534d4f;
+ color: #ffc914;
+}
+
+.number .fa {
+ font-size: 50px;
+}
+
+.numscroller {
+ font-size: 22px;
+ margin: 20px 0;
+}
+
+.number h3 {
+ text-transform: uppercase;
+}
+
+
+/* @media screen and (min-width:576px) {
+ #numbers {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+ }
+
+ .number {
+  flex: 0 0 50%;
+ }
+}
+
+@media screen and (min-width:992px) {
+
+ .number {
+  flex: 0 0 25%;
+ }
+} */
+@media screen and (min-width:576px) {
+ #numbers {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+ }
+}
+
+@media screen and (min-width:992px) {
+ #numbers {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+ }
+}
+
+
+
+
+
+/* end of number section */
+
+
+/* team section  */
+
+#team {
+ padding: 40px 0;
+ background: #c3c3c3;
+}
+
+
+#team .title-subheading {
+ color: #00a7e1;
+}
+
+#team .title-text {
+ border-left: 3px solid #00a7e1;
+}
+
+.team-member {
+ text-align: center;
+ border: 1px solid #2e282a;
+ border-radius: 20px;
+ background: #f5f3f5;
+ transition: background 1s ease;
+ margin: 70px 0;
+}
+
+.team-member:hover {
+ background: #00a7e1;
+}
+
+
+.team-member img {
+ width: 100px;
+ border-radius: 50%;
+ margin-top: -35px;
+}
+
+#team-center {
+ max-width: 90vw;
+ margin: 0 auto;
+ padding: 40px 0;
+}
+
+
+.team-member h2 {
+ text-transform: capitalize;
+}
+
+.team-member h5 {
+ margin: 10px 0;
+ text-transform: uppercase;
+}
+
+.team-member hr {
+ width: 70%;
+ margin: 0 auto;
+ border: 1px solid #ffc914;
+}
+
+.team-member p {
+ line-height: 2;
+ margin: 10px;
+}
+
+.team-member-footer {
+ padding: 20px;
+ background: #2e282a;
+ border-bottom-left-radius: 20px;
+ border-bottom-right-radius: 20px;
+ display: flex;
+ justify-content: space-around;
+}
+
+.team-member-footer .fa {
+ font-size: 30px;
+ color: #ffc914;
+ transition: color 0.5s ease;
+}
+
+.team-member-footer .fa:hover {
+ color: #00a7e1;
+}
+
+/* @media screen and (min-width:576px) {
+ #team-center {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+ }
+
+ .team-member {
+  flex: 0 0 calc(50% - 1em);
+ }
+}
+
+@media screen and (min-width:992px) {
+
+ .team-member {
+  flex: 0 0 calc(25% - 1em);
+ }
+} */
+@media screen and (min-width:576px) {
+ #team-center {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 1em;
+ }
+}
+
+@media screen and (min-width:992px) {
+ #team-center {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1px;
+ }
+}
+
+/* end of team section  */
