--- a/main.css
+++ b/main.css
@@ -919,13 +919,54 @@ form {
  .pricing-center {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 10px;
  }
 }
 
 
-
-
-
 /* end of pricing section */
+
+
+
+
+/* quotes  */
+#quotes {
+ padding: 40px 0;
+ background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+  url(images/quotes-background.jpeg) center/cover fixed no-repeat;
+}
+
+#quotes .title-heading {
+ color: #ffc914;
+}
+
+.quote {
+ text-align: center;
+ color: #f5f3f5;
+ padding: 20px 0;
+ margin: 20px 0;
+}
+
+.quote img {
+ width: 150px;
+ margin: 0 auto;
+ border-radius: 50%;
+
+}
+
+.quote .fa {
+ font-size: 35px;
+ margin-right: 5px;
+ color: #ffc914;
+}
+
+.quote p {
+ line-height: 1.5;
+ width: 80%;
+ margin: 10px auto;
+}
+
+
+
+/* end of quotes  */
