finished new project with html and css + some jQuery plugins, owl-carousel, isotop, magnific iamgezoomer

--- a/main.css
+++ b/main.css
@@ -494,7 +494,7 @@ form {
 }
 
 .ui-accordion .ui-accordion-content {
- background: #b5c2b7;
+ background: #b6b5c2 !important;
  padding: 20px !important;
  color: #f5f3f5;
  border-radius: 10px;
@@ -949,7 +949,7 @@ form {
 }
 
 .quote img {
- width: 150px;
+ width: 150px !important;
  margin: 0 auto;
  border-radius: 50%;
 
@@ -970,3 +970,47 @@ form {
 
 
 /* end of quotes  */
+
+/* footer  */
+#footer {
+ padding: 40px 0;
+ min-height: 40vh;
+ background: #00a7e1;
+}
+
+.info-center,
+iframe {
+ width: 90%;
+
+ margin: 40px auto;
+}
+
+iframe {
+ display: block;
+ border-radius: 20px;
+}
+
+.info-item {
+ display: flex;
+ margin: 10px 0;
+}
+
+.info-item .fa {
+ font-size: 30px;
+ color: #ffc914;
+ padding: 10px;
+ background: #191919;
+ margin-right: 15px;
+}
+
+
+@media screen and (min-width:776px) {
+ #footer {
+  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 1em;
+ }
+}
+
+/* end of footer  */
