--- a/owl/owl.theme.default.css
+++ b/owl/owl.theme.default.css
@@ -9,60 +9,60 @@
  */
 
 .owl-theme .owl-nav {
-  margin-top: 10px;
-  text-align: center;
-  -webkit-tap-highlight-color: white;
+ margin-top: 10px;
+ text-align: center;
+ -webkit-tap-highlight-color: white;
 }
 
 .owl-theme .owl-nav [class*='owl-'] {
-  color: #ffc914!important;
-  font-size: 25px!important;
-  margin: 10px;
-  padding: 4px 7px;
-  background: #D6D6D6;
-  display: inline-block;
-  cursor: pointer;
-  border-radius: 3px;
+ color: #ffc914 !important;
+ font-size: 25px !important;
+ margin: 10px;
+ padding: 4px 7px;
+ background: #D6D6D6;
+ display: inline-block;
+ cursor: pointer;
+ border-radius: 3px;
 }
 
 .owl-theme .owl-nav [class*='owl-']:hover {
-  background: #869791;
-  color: #FFF;
-  text-decoration: none;
+ background: #00a7e1;
+ color: #FFF;
+ text-decoration: none;
 }
 
 .owl-theme .owl-nav .disabled {
-  opacity: 0.5;
-  cursor: default;
+ opacity: 0.5;
+ cursor: default;
 }
 
-.owl-theme .owl-nav.disabled + .owl-dots {
-  margin-top: 10px;
+.owl-theme .owl-nav.disabled+.owl-dots {
+ margin-top: 10px;
 }
 
 .owl-theme .owl-dots {
-  text-align: center;
-  -webkit-tap-highlight-color: transparent;
+ text-align: center;
+ -webkit-tap-highlight-color: transparent;
 }
 
 .owl-theme .owl-dots .owl-dot {
-  display: inline-block;
-  zoom: 1;
-  *display: inline;
+ display: inline-block;
+ zoom: 1;
+ *display: inline;
 }
 
 .owl-theme .owl-dots .owl-dot span {
-  width: 10px;
-  height: 10px;
-  margin: 5px 7px;
-  background: #D6D6D6;
-  display: block;
-  -webkit-backface-visibility: visible;
-  transition: opacity 200ms ease;
-  border-radius: 30px;
+ width: 10px;
+ height: 10px;
+ margin: 5px 7px;
+ background: #D6D6D6;
+ display: block;
+ -webkit-backface-visibility: visible;
+ transition: opacity 200ms ease;
+ border-radius: 30px;
 }
 
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots .owl-dot:hover span {
-  background: #869791;
+ background: #869791;
 }
